--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SECRET=ghfhgfghfghfghfhg
-pass=eheypsrlkrhyjbio
+pass=kghpvanaeyxmdqyf
 URL=http://localhost:5000
 DB_URL=mongodb+srv://kibria:kibria123@cluster0.ak8uw.mongodb.net/chaincome?retryWrites=true&w=majority
-Call_Back=https://newchaincome.herokuapp.com
-Mailstore=chaincome2020@gmail.com
+Call_Back=https://lets-connect-together.herokuapp.com
+Mailstore=tenminuteversity@gmail.com
